terraform/modules/vpc/subnets.tf
#Public Subnets

resource "aws_subnet" "public" {

  count = length(var.public_subnet_cidrs)

  vpc_id = aws_vpc.vpc.id

  cidr_block = var.public_subnet_cidrs[count.index]

  availability_zone = var.availability_zones[count.index]

  map_public_ip_on_launch = true

  tags = merge(
    local.common_tags,
    {
      Name = "${local.project}-public-${count.index + 1}"

      "kubernetes.io/role/elb" = "1"
    }
  )

}


#Private Subnets

resource "aws_subnet" "private" {

  count = length(var.private_subnet_cidrs)

  vpc_id = aws_vpc.vpc.id

  cidr_block = var.private_subnet_cidrs[count.index]

  availability_zone = var.availability_zones[count.index]

  tags = merge(
    local.common_tags,
    {
      Name = "${local.project}-private-${count.index + 1}"

      "kubernetes.io/role/internal-elb" = "1"
    }
  )

}
